# pyspecials

./: .gitignore  ACKNOWLEDGEMENTS.md  README.md  build_requirements.txt  meson.build  pyproject.toml
pyspecials/: __init__.py  meson.build
pyspecials/_core/: __init__.py  meson.build  toms708_test.py  typing.py
pyspecials/_core/toms708/: bratio.c  bratio_docstrings.py
pyspecials/_internal/: __init__.py  meson.build  numerics_testing.py
src/pyspecials/_core/: meson.build  toms708.pyi  typing.py
src/pyspecials/_core/toms708/: bratio.c  bratio.f  bratio_docstrings.py
src/pyspecials/_internal/: meson.build  numerics_testing.py
tests/: __init__.py
tests/_core/: toms708_test.py
tests/_internal/: numerics_testing_test.py
